fix model alignment

--- a/src/style.css
+++ b/src/style.css
@@ -235,7 +235,7 @@ html, body {
     align-items: flex-start;
     justify-content: center;
     flex-direction: column;
-    color: #222;
+    color: white;
     opacity: 0.5;
 }
 .second h4 {
@@ -287,6 +287,7 @@ canvas {
     margin: 5px;
     font-family: sans-serif;
     z-index: 99;
+    display: none;
 } 
   
 
@@ -307,7 +308,7 @@ canvas {
 .btn {
     width: 0.75rem;
     height: 0.75rem;
-    background-color:black;
+    background-color: #f8f8f8;
     border-radius: 50%;
     cursor: pointer;
     opacity: 0.1;
